Added conclusion and appendix